Added login system, launcher now works on Linux

--- a/src/main/resources/minecraft/launcher_profiles.json
+++ b/src/main/resources/minecraft/launcher_profiles.json
@@ -5,32 +5,15 @@
     "name": "",
     "profilesFormat": 2
   },
-  "profiles": {
-    "354fd04788e51c070074ff171844034d": {
-      "created": "1970-01-02T00:00:00.000Z",
-      "icon": "Grass",
-      "lastUsed": "1970-01-02T00:00:00.000Z",
-      "lastVersionId": "latest-release",
-      "name": "",
-      "type": "latest-release"
-    },
-    "e08aecff42df2e1cbc2b598aea2cd11f": {
-      "created": "1970-01-01T00:00:00.000Z",
-      "icon": "Crafting_Table",
-      "lastUsed": "1970-01-01T00:00:00.000Z",
-      "lastVersionId": "latest-snapshot",
-      "name": "",
-      "type": "latest-snapshot"
-    }
-  },
+  "profiles": {},
   "settings": {
     "channel": "release",
-    "crashAssistance": true,
-    "enableAdvanced": false,
-    "enableAnalytics": true,
-    "enableHistorical": false,
+    "crashAssistance": false,
+    "enableAdvanced": true,
+    "enableAnalytics": false,
+    "enableHistorical": true,
     "enableReleases": true,
-    "enableSnapshots": false,
+    "enableSnapshots": true,
     "keepLauncherOpen": false,
     "locale": "en-US",
     "profileSorting": "ByLastPlayed",
