--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
             <name>bintray</name>
             <url>https://dl.bintray.com/jerady/maven</url>
         </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
     <build>
@@ -103,6 +107,11 @@
             <groupId>de.jensd</groupId>
             <artifactId>fontawesomefx-materialicons</artifactId>
             <version>2.2.0-5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hildan.fxgson</groupId>
+            <artifactId>fx-gson</artifactId>
+            <version>3.1.2</version>
         </dependency>
 
         <dependency>
